fixes update env, rm axios dep
