# src/api.ts
@@ -297,7 +297,9 @@ export interface paths {
                     headers: {
                         [name: string]: unknown;
                     };
-                    content?: never;
+                    content: {
+                        "application/json": components["schemas"]["EnvironmentResponse"];
+                    };
                 };
             };
         };
